  o ATI graphics card support. Static linking against SFML instead of dynamic.
    Should inprove ATI card support. Needs testing.

Layer
-----

  o Fixed a problem where the first frame was not always shown on LOAD.

Audio mixer
-----------

  o Added support for a master volume mixer setting for each channel.

Video mixer
-----------

  o Added support for chroma keying.

Consumers
---------

  o Simplified implementation of bluefish consumer, with regards to
  o Avoid that the ffmpeg consumer blocks the channel output when it can't keep
    up with the frame rate (drops instead).
  o Added support for to create a separate key and fill file when recording with
    the ffmpeg consumer. Add the SEPARATE_KEY parameter to the ffmpeg consumer
    parameter list. The key file will get the _A suffix to be picked up by the
    separated_producer when doing playback.
  o The image consumer now writes to the media folder instead of the data
    folder.
  o Fixed bug in decklink consumer where we submit too few samples to the driver
    when the video format has a frame rate > 50.

Producers
---------

  o Added support for playing .swf files using the flash producer.
  o image producer premultiplies PNG images with their alpha.
  o image producer can load a PNG image encoded as base64 via:
    PLAY 1-0 [PNG_BASE64] <base64 string>
  o ffmpeg producer can now use a directshow input filters:
    PLAY 1-10 "dshow://video=Some Camera"

AMCP
----

  o The master volume feature is controlled via the MASTERVOLUME MIXER
    parameter. Example: MIXER 1 MASTERVOLUME 0.5
  o THUMBNAIL LIST/RETRIEVE/GENERATE/GENERATE_ALL command was added to support
    the thumbnail feature.
  o ADD 1 FILE output.mov SEPARATE_KEY activates the separate key feature of the
    ffmpeg consumer creating an additional output_a.mov containing only the key.
  o Added KILL command for shutting down the server without console access.